--- a/index.html
+++ b/index.html
@@ -87,8 +87,7 @@
         </section>
 
         <footer class="text-center mt-5 pt-4 border-top text-muted small">
-            <p>Система мониторинга. Статус обновляется при загрузке страницы и по запросу. Для проверки RDP-серверов используется соединение по стандартным портам.</p>
-            <p class="mb-0">Тёмная тема реализована с помощью Bootstrap 5.3</p>
+            <p>Система мониторинга xata436</p>
         </footer>
     </div>
 
