--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
 
 <div class="container">
-    <h2 class="text-center mb-4">Мониторинг Систем (Secure Mode)</h2>
+    <h2 class="text-center mb-4">Мониторинг Систем</h2>
 
     <!-- Блок IP -->
     <div class="card status-card">
